Cambios finales presentación

--- a/3 - Proyecto/Despacho/WebApp/Content/less/general.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/general.less
@@ -29,3 +29,14 @@ body {
 	background-color: #colores[claro]!important;
 	color: #colores[blanco]!important;
 }
+
+#filtro-filtrar {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 35px;
+}
+
+.m-aside-menu.m-aside-menu--skin-dark .m-menu__nav > .m-menu__item.m-menu__item--active > .m-menu__link .m-menu__link-text {
+	color: white !important;
+}
