--- a/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Camion/index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho-Camiones";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Camiones";
+	ViewBag.Pagina = 10;
 }
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/camion.less" />
