--- a/3 - Proyecto/Despacho/WebApp/Views/Cliente/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Cliente/Index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho - Clientes";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Clientes";
+	ViewBag.Pagina = 4;
 }
 
 @section Less{
