--- a/3 - Proyecto/Despacho/WebApp/Views/Enlaces/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Enlaces/Index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho - Enlace";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Enlace";
+	ViewBag.Pagina = 14;
 }
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/enlace.less" />
