--- a/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/EstadoEquipo.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/EstadoEquipo.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Datos.Modelo.EstadoEquipo
 @{
 	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.Pagina = 11;
 
 	if (Model.Estadoequipoid == 0)
 	{
