--- a/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/EstadoEquipo/Index.cshtml
@@ -2,6 +2,7 @@
   ViewBag.Title = "Despacho - Estado Equipo";
   ViewBag.SeccionTieneTitulo = true;
   ViewBag.TituloSeccion = "Estado Equipo";
+    ViewBag.Pagina = 11;
 }
 @section Less{
   <link rel="stylesheet/less" type="text/css" href="~/Content/less/estadoequipo.less" />
