--- a/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/Index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho-Tipo Documentos";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Tipo Documentos";
+	ViewBag.Pagina = 15;
 }
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/tipodocumento.less" />
