--- a/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/TipoDocumento.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoDocumento/TipoDocumento.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Datos.Modelo.TipoDocumento
 @{
 	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.Pagina = 15;
 
 	if (Model.Tipodocumentoid == 0)
 	{
