--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/Index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho - Tipos de Solicitudes";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Tipos de Solicitudes";
+	ViewBag.Pagina = 9;
 }
 
 @section Less{
