--- a/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/TipoSolicitud/TipoSolicitud.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Datos.Modelo.TipoSolicitud
 @{
 	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.Pagina = 9;
 
 	if (Model.Tiposolicitudid == 0)
 	{
