--- a/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/UnidadNegocio/UnidadNegocio.cshtml
@@ -1,6 +1,7 @@
 ﻿@model Datos.Modelo.UnidadNegocio
 @{
 	ViewBag.SeccionTieneTitulo = true;
+	ViewBag.Pagina = 5;
 
 	if (Model.UnidadNegocioId == 0)
 	{
