--- a/3 - Proyecto/Despacho/WebApp/Views/Usuario/index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Usuario/index.cshtml
@@ -2,6 +2,7 @@
 	ViewBag.Title = "Despacho - Usuarios";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Usuarios";
+	ViewBag.Pagina = 7;
 }
 
 @section Scripts{
