--- a/3 - Proyecto/Despacho/WebApp/Views/Clasificacion/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Clasificacion/Index.cshtml
@@ -2,13 +2,14 @@
 	ViewBag.Title = "Despacho-Clasificaciones";
 	ViewBag.SeccionTieneTitulo = true;
 	ViewBag.TituloSeccion = "Clasificación";
+	ViewBag.Pagina = 12;
 }
 @section Less{
 	<link rel="stylesheet/less" type="text/css" href="~/Content/less/clasificacion.less" />
 }
 @section Scripts{
 	@Scripts.Render("~/bundles/clasificacion")
-})
+}
 
 <div class="m-portlet m-portlet--mobile">
 	<div class="m-portlet__head">
