--- a/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Solicitud/Index.cshtml
@@ -7,14 +7,15 @@
 	List<Datos.Modelo.TipoSolicitud> tipos = Datos.Datos.TipoSolicitud.ObtenerTiposSolicitudes();
 	List<Datos.Modelo.EstadoEquipo> estadosEquipos = Datos.Datos.EstadoEquipo.ObtenerEstadosEquipos();
 	List<Datos.Modelo.EstadoSolicitud> estadosSolicitudes = Datos.Datos.EstadoSolicitud.ObtenerEstadosSolicitudes();
+	List<Datos.Modelo.ModeloExistencia> modelos = Datos.Datos.ModeloExistencia.ObtenerModelosExistencias();
 }
 
 @section Less {
-	<!--<link rel="stylesheet/less" type="text/css" href="~/Content/less/solicitud.less" />-->
+	<link rel="stylesheet/less" type="text/css" href="~/Content/less/solicitud.less" />
 }
 
 @section Scripts {
-	<script src="~/Content/js/Solicitud.js type="text/javascript"></script>
+	<script src="~/Content/js/Solicitud.js" type="text/javascript"></script>
 }
 
 <div class="m-portlet m-portlet--metal m-portlet--head-solid-bg m-portlet--head-sm" m-portlet="true" id="m_portlet_tools_1">
@@ -32,8 +33,11 @@
 		<div class="m-portlet__head-tools">
 			<ul class="m-portlet__nav">
 				<li class="m-portlet__nav-item">
-					<a href="#" id="filtro-filtrar" class="m-portlet__nav-link m-portlet__nav-link--icon">
-						<i class="la la-refresh"></i>
+					<a href="#" id="filtro-filtrar" class="btn btn-secondary m-btn--md m--margin-right-10">
+						<span>
+							<span>Filtrar</span>&nbsp;&nbsp;
+							<i class="la la-refresh"></i>
+						</span>
 					</a>
 				</li>
 				<li class="m-portlet__nav-item">
@@ -47,7 +51,7 @@
 	<div class="m-portlet__body">
 		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 			<div class="row">
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Patente</label>
 						<div class="col-lg-8 col-sm-12">
@@ -55,7 +59,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Denominacion</label>
 						<div class="col-lg-8 col-sm-12">
@@ -63,11 +67,12 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Tipo de Solicitud</label>
 						<div class="col-lg-8 col-sm-12">
-							<select class="form-control m-select2" id="filtro-bin" name="filtro-bin">
+							<select class="form-control m-select2" id="filtro-tipo-solicitud" name="filtro-tipo-solicitud">
+								<option value="" selected>Todos</option>
 								@foreach (Datos.Modelo.TipoSolicitud tipo in tipos)
 								{
 									<option value="@tipo.Tiposolicitudid">@tipo.Descripcion</option>
@@ -76,32 +81,40 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Material</label>
 						<div class="col-lg-8 col-sm-12">
-							<select class="form-control m-select2" id="filtro-material" name="filtro-material"></select>
-						</div>
-					</div>
-				</div>
-				<div class="col-xl-6">
-					<div class="form-group m-form__group row">
-						<label class="col-form-label col-lg-3 col-sm-12">Estado Equipos</label>
-						<div class="col-lg-8 col-sm-12">
-							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-estado-equipos">
-								@foreach (Datos.Modelo.EstadoEquipo estado in estadosEquipos)
+							<select class="form-control m-select2" id="filtro-material" name="filtro-material">
+								<option value="" selected>Todos</option>
+								@foreach (Datos.Modelo.ModeloExistencia modelo in modelos)
 								{
-									<option value="@estado.estadoequipoid">@estado.descripcion</option>
+									<option value="@modelo.Codigo">@modelo.Codigo</option>
 								}
 							</select>
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-3 col-sm-12">Estado Equipos</label>
+						<div class="col-lg-8 col-sm-12">
+							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-estado-equipos">
+								<option value="" selected>Todos</option>
+								@foreach (Datos.Modelo.EstadoEquipo estado in estadosEquipos)
+								{
+									<option value="@estado.Descripcion">@estado.Descripcion</option>
+								}
+							</select>
+						</div>
+					</div>
+				</div>
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Estado Solicitud</label>
 						<div class="col-lg-8 col-sm-12">
-							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-estado-solicitud">
+							<select class="form-control m-select2" id="filtro-estado-solicitud" name="filtro-estado-solicitud">
+								<option value="" selected>Todos</option>
 								@foreach (Datos.Modelo.EstadoSolicitud estado in estadosSolicitudes)
 								{
 									<option value="@estado.EstadoSolicitudId">@estado.Descripcion</option>
@@ -110,11 +123,16 @@
 						</div>
 					</div>
 				</div>
-				<div class="col-xl-6">
+				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Fecha Solicitud</label>
-						<div class="col-lg-8 col-sm-12">
-							<select class="form-control m-select2" id="filtro-estado-equipos" name="filtro-fecha-solicitud"></select>
+						<div class="col-lg-9 col-sm-12">
+							<div class='input-group pull-right' id='filtro-fecha-solicitud'>
+								<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de inicio y fin" />
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -141,7 +159,7 @@
 					<div class="form-group m-form__group row align-items-center">
 						<div class="col-md-4">
 							<div class="m-input-icon m-input-icon--left">
-								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarCliente">
+								<input type="text" class="form-control m-input m-input--solid" placeholder="Buscar..." id="buscarSolicitud">
 								<span class="m-input-icon__icon m-input-icon__icon--left">
 									<span><i class="la la-search"></i></span>
 								</span>
@@ -150,10 +168,10 @@
 					</div>
 				</div>
 				<div class="col-xl-4 order-1 order-xl-2 m--align-right">
-					<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+					<a href="/Solicitud/Solicitud" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
 						<span>
 							<i class="flaticon-add"></i>
-							<span>Crear</span>
+							<span>Nueva Solicitud</span>
 						</span>
 					</a>
 					<div class="m-separator m-separator--dashed d-xl-none"></div>
@@ -162,7 +180,7 @@
 		</div>
 		<!--end: Search Form -->
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="local_data"></div>
+		<div class="m_datatable" id="lista-solicitudes"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
