--- a/3 - Proyecto/Despacho/WebApp/Views/Enlaces/Enlaces.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Enlaces/Enlaces.cshtml
@@ -33,9 +33,9 @@
 
 			<div class="form-group m-form__group row">
 				<label for="example-text-input" class="col-2 col-form-label">RUT</label>
-				<input class="form-control m-input" type="number" aria-describedby="numberHelp" value="@Model.RUT" id="rut" style="width: 10%">
+				<input class="form-control m-input" type="number" pattern="[0-9]*" maxlength="12" aria-valuemax="99999999" aria-describedby="numberHelp" value="@Model.RUT" id="rut" style="width: 10%">
 				<label for="example-text-input" class="col-1 col-form-label">-</label>
-				<input class="form-control m-input" type="text"  value="(@Model.DV)" id="dv" style="width: 10%">
+				<input class="form-control m-input" type="text"  readonly value="(@Model.DV)" id="dv" style="width: 10%">
 			</div>
 			<div class="form-group m-form__group row">
 				<label for="example-text-input" class="col-2 col-form-label">Nombres</label>
