Cambios Finales Enlaces
Se modifica el mantenedor de enlaces, ahora se llama Personal, se modifican todas las referencias y propiedades acorde al nuevo nombre
Se corrigen errores en el mantenedor de Enlaces
Se avanza en mantenedor de Solicitudes

--- a/3 - Proyecto/Despacho/WebApp/Content/less/general.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/general.less
@@ -3,21 +3,26 @@
 	secundario: #0B6880;
 	claro: #17A680;
 	blanco: #FFFFFF;
+	gris-claro: #dedede;
 }
 
 body {
 }
 
-.m-aside-menu.m-aside-menu--skin-dark .m-menu__nav > .m-menu__item.m-menu__item--active > .m-menu__link {
+.m-menu__item.m-menu__item--active > .m-menu__link {
 	background-color: #colores[primario]!important;
 }
 
-.m-aside-menu.m-aside-menu--skin-dark .m-menu__nav > .m-menu__item.m-menu__item--active > .m-menu__link .m-menu__link-icon {
+.m-menu__item.m-menu__item--active > .m-menu__link .m-menu__link-icon {
 	color: #colores[blanco]!important;
 }
 
-.m-aside-menu .m-menu__nav > .m-menu__item .m-menu__submenu .m-menu__item > .m-menu__link .m-menu__link-bullet {
-	width: 35px !important;
+.m_aside_left .m-menu__item .m-menu__link .m-menu__link-text {
+	color: #colores[gris-claro]!important;
+}
+
+.m-menu__item.m-menu__item--active > .m-menu__link .m-menu__link-text {
+	color: #colores[blanco]!important;
 }
 
 #m_header_menu .m-menu__link-badge span {
@@ -39,4 +44,8 @@ body {
 
 .m-aside-menu.m-aside-menu--skin-dark .m-menu__nav > .m-menu__item.m-menu__item--active > .m-menu__link .m-menu__link-text {
 	color: white !important;
+}
+
+.m-timeline-2 {
+	position: relative;
 }
