--- a/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 	<!-- begin:: Page -->
 	<div class="m-grid m-grid--hor m-grid--root m-page">
 		<!-- BEGIN: Header -->
-		<header id="m_header" class="m-grid__item    m-header " m-minimize-offset="200" m-minimize-mobile-offset="200">
+		<header id="m_header" class="m-grid__item m-header" m-minimize-offset="200" m-minimize-mobile-offset="200">
 			<div class="m-container m-container--fluid m-container--full-height">
 				<div class="m-stack m-stack--ver m-stack--desktop">
 					<!-- BEGIN: Brand -->
@@ -268,7 +268,7 @@
 			<button class="m-aside-left-close  m-aside-left-close--skin-dark " id="m_aside_left_close_btn"><i class="la la-close"></i></button>
 			<div id="m_aside_left" class="m-grid__item	m-aside-left  m-aside-left--skin-dark ">
 				<!-- BEGIN: Aside Menu -->
-				<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" m-menu-vertical="1" m-menu-scrollable="0" m-menu-dropdown-timeout="500" style="position: relative;">
+				<div id="m_ver_menu" class="m-aside-menu  m-aside-menu--skin-dark m-aside-menu--submenu-skin-dark" m-menu-vertical="1" m-menu-scrollable="1" m-menu-dropdown-timeout="500" style="position: relative;">
 					<ul class="m-menu__nav m-menu__nav--dropdown-submenu-arrow">
 						<li class="m-menu__item  @(ViewBag.Pagina == 0 ? "m-menu__item--active" : "")" aria-haspopup="true">
 							<a href="/Home/Index" class="m-menu__link ">
@@ -340,19 +340,19 @@
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 4 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/Cliente/Index" class="m-menu__link">
-												<i class="m-menu__link-bullet flaticon-users" style="color: #868aa8"><span></span></i>
+												<i class="m-menu__link-icon flaticon-users" style="color: #868aa8"><span></span></i>
 												<span class="m-menu__link-text">Clientes</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 5 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/UnidadNegocio/Index" class="m-menu__link">
-												<i class="m-menu__link-bullet flaticon-suitcase" style="color: #868aa8"><span></span></i>
+												<i class="m-menu__link-icon flaticon-suitcase" style="color: #868aa8"><span></span></i>
 												<span class="m-menu__link-text">Unidades Negocio</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 6 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/Gerencia/Index" class="m-menu__link">
-												<i class="m-menu__link-bullet flaticon-user-settings" style="color: #868aa8"><span></span></i>
+												<i class="m-menu__link-icon flaticon-user-settings" style="color: #868aa8"><span></span></i>
 												<span class="m-menu__link-text">Gerencias</span>
 											</a>
 										</li>
@@ -377,13 +377,13 @@
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 7 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/Usuario/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-user-add" style="color: #868aa8"><span></span></i>
+												<i class="m-menu__link-icon flaticon-user-add" style="color: #868aa8"><span></span></i>
 												<span class="m-menu__link-text">Usuarios</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 8 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/Perfil/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-user-ok" style="color: #868aa8"><span></span></i>
+												<i class="m-menu__link-icon flaticon-user-ok" style="color: #868aa8"><span></span></i>
 												<span class="m-menu__link-text">Roles</span>
 											</a>
 										</li>
@@ -408,19 +408,19 @@
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 9 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/TipoSolicitud/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-folder-2" style="color: #868aa8;"><span></span></i>
+												<i class="m-menu__link-icon flaticon-folder-2" style="color: #868aa8;"><span></span></i>
 												<span class="m-menu__link-text">Tipos Solicitud</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 10 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/Camion/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-truck" style="color: #868aa8;"><span></span></i>
+												<i class="m-menu__link-icon flaticon-truck" style="color: #868aa8;"><span></span></i>
 												<span class="m-menu__link-text">Camiones</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 11 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/EstadoEquipo/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-technology" style="color: #868aa8;"><span></span></i>
+												<i class="m-menu__link-icon flaticon-technology" style="color: #868aa8;"><span></span></i>
 												<span class="m-menu__link-text">Estados Equipos</span>
 											</a>
 										</li>
@@ -437,14 +437,14 @@
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 14 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
-											<a href="/Enlaces/Index" class="m-menu__link ">
+											<a href="/Personal/Index" class="m-menu__link ">
 												<i class="m-menu__link-icon flaticon-layers" style="color: #868aa8;"><span></span></i>
-												<span class="m-menu__link-text">Enlaces</span>
+												<span class="m-menu__link-text">Personal</span>
 											</a>
 										</li>
 										<li class="m-menu__item @(ViewBag.Pagina == 15 ? "m-menu__item--active" : "")" aria-haspopup="true" m-menu-link-redirect="1">
 											<a href="/TipoDocumento/Index" class="m-menu__link ">
-												<i class="m-menu__link-bullet flaticon-folder-2" style="color: #868aa8;"><span></span></i>
+												<i class="m-menu__link-icon flaticon-folder-2" style="color: #868aa8;"><span></span></i>
 												<span class="m-menu__link-text">Tipos Documentos</span>
 											</a>
 										</li>
