Se restablece type = "number" en textbox RUT

--- a/3 - Proyecto/Despacho/WebApp/Views/Personal/Personal.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Personal/Personal.cshtml
@@ -33,7 +33,7 @@
 
 			<div class="form-group m-form__group row">
 				<label for="example-text-input" class="col-2 col-form-label">RUT</label>
-				<input class="form-control m-input" type="text" pattern="[0-9]*" maxlength="8" aria-valuemax="99999999" aria-describedby="RUR" value="@Model.RUT" id="rut" style="width: calc(41% - 40px);">
+				<input class="form-control m-input" type="number" pattern="[0-9]*" maxlength="8" aria-valuemax="99999999" aria-describedby="RUT" value="@Model.RUT" id="rut" style="width: calc(41% - 40px);">
 				<label for="example-text-input" class="col-form-label">-</label>
 				<input class="form-control m-input" type="text" value="@Model.DV" id="dv" style="width: 40px" maxlength="1">
 			</div>
