--- a/3 - Proyecto/Despacho/WebApp/Views/Personal/Personal.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/Personal/Personal.cshtml
@@ -81,7 +81,7 @@
 					</div>
 					<div class="col-10">
 						<button type="button" class="btn btn-success" id="btnGuardar">Guardar</button>
-						<a href="/Enlaces/Index" class="btn btn-secondary">Volver</a>
+						<a href="/Personal/Index" class="btn btn-secondary">Volver</a>
 					</div>
 				</div>
 			</div>
