--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -51,11 +51,15 @@
 				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Usuario</label>
-						<div class="col-lg-8 col-sm-12">
-							<input class="form-control m-select2" id="filtro-usuario" name="filtro-usuario" type="text">
-								
-							</input>
-						</div>
+						<!--<input class="form-control m-select2" id="filtro-usuario" name="filtro-usuario" type="text">
+						-->
+						<select class="form-control col-lg-3 col-sm-12 m-select2" id="filtro-usuario" name="filtro-usuario">
+							<option value="" selected>Todos</option>
+							@foreach (Datos.Modelo.Usuario usuario in usuarios)
+							{
+								<option value="@usuario.UsuarioId">@usuario.NombreCompleto</option>
+							}
+						</select>
 					</div>
 				</div>
 			</div>
@@ -64,9 +68,23 @@
 			<div class="row">
 				<div class="col-xl-6 m--margin-top-10">
 					<div class="form-group m-form__group row">
-						<label class="col-form-label col-lg-3 col-sm-12">Fecha realización</label>
+						<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
+						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
+						<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
+						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
+
+						<!--
+							<div class="col-lg-9 col-sm-12">
+								<div class='input-group pull-right' id='filtro-fecha-fecharealizada'>
+									<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de realización de la carga masiva" />
+									<div class="input-group-append">
+										<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
+									</div>
+								</div>
+							</div>
+		-->
 						<div class="col-lg-8 col-sm-12">
-							<input class="form-control" id="filtro-fecharealizada" name="filtro-fecharealizada" type="date" />
+
 						</div>
 					</div>
 				</div>
@@ -78,20 +96,29 @@
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
 			<div class="m-portlet__head-title">
-				<h3 class="m-portlet__head-text">
-					Filtros
-				</h3>
 			</div>
 		</div>
 	</div>
 	<div class="m-portlet__body">
-		<input class="form-control m-input" type="text" value="Artisanal kale" id="buscarCargaMasiva">
-		<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-			<span>
-				<i class="flaticon-add"></i>
-				<span>Crear</span>
-			</span>
-		</a>
+		<div class="col-5">
+			<div class="form-group m-form__group">
+				<label for="exampleInputEmail1">Carga Masiva</label>
+				<br />
+				<div class="custom-file">
+					<input type="file" class="custom-file-input" lang="es-cl"  id="archivocarga" accept=".xls,.xlsx">
+					<label class="custom-file-label" for="archivocarga">Seleccione un archivo</label>
+				</div>
+			</div>
+		</div>
+		<!--
+			<input class="form-control m-input" type="text" value="Artisanal kale" id="buscarCargaMasiva">
+			<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+				<span>
+					<i class="flaticon-add"></i>
+					<span>Crear</span>
+				</span>
+			</a>
+	-->
 	</div>
 </div>
 
