--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -67,26 +67,28 @@
 		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 			<div class="row">
 				<div class="col-xl-6 m--margin-top-10">
+					<!--
+						<div class="col-lg-6 col-xs-12 ">
+							<div class="form-group m-form__group row">
+								<label class="col-form-label col-lg-6 col-sm-10">Fecha de Carga</label>
+								<div class="col-lg-6 col-sm-12 mt-2">
+									<div class='input-group pull-right' id='filtro-fechacarga'>
+										<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de carga" />
+										<div class="input-group-append">
+											<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					-->
 					<div class="form-group m-form__group row">
 						<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
 						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
 						<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
 						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
-
-						<!--
-							<div class="col-lg-9 col-sm-12">
-								<div class='input-group pull-right' id='filtro-fecha-fecharealizada'>
-									<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de realización de la carga masiva" />
-									<div class="input-group-append">
-										<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
-									</div>
-								</div>
-							</div>
-		-->
-						<div class="col-lg-8 col-sm-12">
-
-						</div>
 					</div>
+
 				</div>
 			</div>
 		</div>
