--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -53,11 +53,11 @@
 						<label class="col-form-label col-lg-3 col-sm-12">Usuario</label>
 						<!--<input class="form-control m-select2" id="filtro-usuario" name="filtro-usuario" type="text">
 						-->
-						<select class="form-control col-lg-3 col-sm-12 m-select2" id="filtro-usuario" name="filtro-usuario">
+						<select class="form-control col-lg-3 col-sm-12 m-select2" id="filtro-usuario" name="filtro-cliente">
 							<option value="" selected>Todos</option>
 							@foreach (Datos.Modelo.Usuario usuario in usuarios)
 							{
-								<option value="@usuario.UsuarioId">@usuario.NombreCompleto</option>
+								<option value="@usuario.UsuarioId">@usuario.Username</option>
 							}
 						</select>
 					</div>
@@ -67,61 +67,62 @@
 		<div class="m-form m-form--label-align-right m--margin-top-20 m--margin-bottom-30">
 			<div class="row">
 				<div class="col-xl-6 m--margin-top-10">
-					<!--
-						<div class="col-lg-6 col-xs-12 ">
-							<div class="form-group m-form__group row">
-								<label class="col-form-label col-lg-6 col-sm-10">Fecha de Carga</label>
-								<div class="col-lg-6 col-sm-12 mt-2">
-									<div class='input-group pull-right' id='filtro-fechacarga'>
-										<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de carga" />
-										<div class="input-group-append">
-											<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
-										</div>
-									</div>
+					<div class="form-group m-form__group row">
+						<label class="col-form-label col-lg-4 col-sm-12">Fecha Carga</label>
+						<div class="col-lg-7 col-sm-12">
+							<div class='input-group pull-right' id='filtro-fechacarga'>
+								<input type='text' class="form-control m-input" readonly placeholder="Seleccione la fecha de la carga" />
+								<div class="input-group-append">
+									<span class="input-group-text"><i class="la la-calendar-check-o"></i></span>
 								</div>
 							</div>
 						</div>
-					-->
-					<div class="form-group m-form__group row">
-						<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
-						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
-						<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
-						<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
 					</div>
-
 				</div>
+						<!--
+							<label class="col-form-label col-lg-3 col-sm-12">Fecha desde</label>
+							<input class="form-control col-lg-3 col-sm-12" id="filtro-fechadesde" name="filtro-fechadesde" type="date" value=date.now />
+							<label class="col-form-label col-lg-3 col-sm-12">Fecha hasta</label>
+							<input class="form-control col-lg-3 col-sm-12" id="filtro-fechahasta" name="filtro-fechahasta" type="date" value="today" />
+						-->
 			</div>
+
 		</div>
+			
 	</div>
 </div>
 <div class="m-portlet m-portlet--mobile">
 	<div class="m-portlet__head">
 		<div class="m-portlet__head-caption">
 			<div class="m-portlet__head-title">
+				<label for="exampleInputEmail1">Carga Masiva</label>
 			</div>
 		</div>
 	</div>
 	<div class="m-portlet__body">
-		<div class="col-5">
+		<div class="col-12 col-lg-5">
 			<div class="form-group m-form__group">
-				<label for="exampleInputEmail1">Carga Masiva</label>
-				<br />
 				<div class="custom-file">
-					<input type="file" class="custom-file-input" lang="es-cl"  id="archivocarga" accept=".xls,.xlsx">
+					<input type="file" class="custom-file-input" lang="es-cl" id="archivocarga" accept=".xls,.xlsx">
 					<label class="custom-file-label" for="archivocarga">Seleccione un archivo</label>
+				</div>
+				<div class="form-group m-form__group">
+					<a class="pull-right btn btn-sm btn-success col-8 col-lg-5 mb-3 mr-3" href="../Content/Archivos/Carga Masiva.xls" target="_blank" style="float: right;margin-top: 2.2rem;">Descargar Archivo Ejemplo</a>
 				</div>
 			</div>
 		</div>
-		<!--
-			<input class="form-control m-input" type="text" value="Artisanal kale" id="buscarCargaMasiva">
-			<a href="#" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
-				<span>
-					<i class="flaticon-add"></i>
-					<span>Crear</span>
-				</span>
-			</a>
-	-->
-	</div>
+		<div class="col-5">
+			<button class="btn btn-sm btn-primary" id="btnProcesarRegistros" style="width: 100%; font-size: 1.4rem;margin-top: 2.2rem;">Procesar</button>
+		</div>
+			<div class="col-7" id="alertaProcesar" style="display:none;">
+				<div class="alert alert-warning">
+					<strong>¡Importante!</strong> Presione el botón <b>Procesar</b> para guardar la información.
+				</div>
+			</div>
+
+
+			
+		</div>
 </div>
 
 <div class="m-portlet m-portlet--mobile">
@@ -136,7 +137,7 @@
 	</div>
 	<div class="m-portlet__body">
 		<!--begin: Datatable -->
-		<div class="m_datatable" id="local_data"></div>
+		<div class="m_datatable" id="lista-cargasmasivas"></div>
 		<!--end: Datatable -->
 	</div>
 </div>
