--- a/3 - Proyecto/Despacho/WebApp/Content/less/solicitud.less
+++ b/3 - Proyecto/Despacho/WebApp/Content/less/solicitud.less
@@ -8,6 +8,10 @@ body {
 	border-color: #colores[primario] !important;
 }
 
-.m-datatable__row {	   
+#lista-solicitudes .m-datatable__row {
 	cursor: pointer;
+}
+
+.select2.select2-container {
+	width: inherit !important;
 }
