--- a/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
+++ b/3 - Proyecto/Despacho/WebApp/Views/CargaMasiva/Index.cshtml
@@ -101,6 +101,16 @@
 					Listado
 				</h3>
 			</div>
+			<div class="col-xl-4 order-1 order-xl-2 m--align-right">
+				<a href="/CargaMasiva/Create" class="btn btn-success m-btn m-btn--custom m-btn--icon m-btn--air m-btn--pill">
+					<span>
+						<i class="flaticon-add"></i>
+						<span>Crear Carga</span>
+					</span>
+				</a>
+				<div class="m-separator m-separator--dashed d-xl-none"></div>
+			</div>
+			
 		</div>
 	</div>
 	<div class="m-portlet__body">
